User registration and login

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,11 +102,11 @@
   <body>
     <div class="container">
       <div class="card">
-        <form class="loginForm" action="login" method="register">
+        <form class="loginForm" action="login" method="post">
           <input
             type="text"
             id="username"
-            placeholder=" Email"
+            placeholder=" User Name"
             name="userName"
           />
           <div id="usernameError" class="error"></div>
