--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -129,5 +129,48 @@
         </div>
       </div>
     </div>
+ <script>
+    // Get the input fields and error message elements
+    const usernameInput = document.getElementById('username');
+    const passwordInput = document.getElementById('password');
+    const usernameError = document.getElementById('usernameError');
+    const passwordError = document.getElementById('passwordError');
+
+    // Add event listeners to the input fields
+    usernameInput.addEventListener('input', validateUsername);
+    passwordInput.addEventListener('input', validatePassword);
+
+    // Validation functions
+    function validateUsername() {
+      if (usernameInput.value.trim() === '') {
+        usernameError.textContent = 'Please enter a username.';
+      } else {
+        usernameError.textContent = '';
+      }
+    }
+
+    function validatePassword() {
+      if (passwordInput.value.trim() === '') {
+        passwordError.textContent = 'Please enter a password.';
+      } else {
+        passwordError.textContent = '';
+      }
+    }
+
+    function validateForm(event) {
+      event.preventDefault(); // Prevent the form from submitting
+
+      // Validate the form fields
+      validateUsername();
+      validatePassword();
+
+      // Check if there are any error messages
+      if (usernameError.textContent === '' && passwordError.textContent === '') {
+        // Submit the form if there are no errors
+        event.target.submit();
+      }
+    }
+  </script>
+
   </body>
 </html>
